--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml
+# Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml,images
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml,images
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -15,6 +15,71 @@
 *_BASE_*.txt
 *_LOCAL_*.txt
 *_REMOTE_*.txt
+
+### Images ###
+# JPEG
+*.jpg
+*.jpeg
+*.jpe
+*.jif
+*.jfif
+*.jfi
+
+# JPEG 2000
+*.jp2
+*.j2k
+*.jpf
+*.jpx
+*.jpm
+*.mj2
+
+# JPEG XR
+*.jxr
+*.hdp
+*.wdp
+
+# Graphics Interchange Format
+*.gif
+
+# RAW
+*.raw
+
+# Web P
+*.webp
+
+# Portable Network Graphics
+*.png
+
+# Animated Portable Network Graphics
+*.apng
+
+# Multiple-image Network Graphics
+*.mng
+
+# Tagged Image File Format
+*.tiff
+*.tif
+
+# Scalable Vector Graphics
+*.svg
+*.svgz
+
+# Portable Document Format
+*.pdf
+
+# X BitMap
+*.xbm
+
+# BMP
+*.bmp
+*.dib
+
+# ICO
+*.ico
+
+# 3D Images
+*.3dm
+*.max
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -695,4 +760,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml
+# End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode,pycharm+all,pycharm,pycharm+iml,git,pydev,jetbrains,jetbrains+all,jetbrains+iml,images
